# worm

./: .gitignore  CLAUDE.md  README.md
paper/figures/: config.ai  insertkink.ai  insertworm.ai  move.ai
parameter_files/: BoseHubbard.ini  XXZ.ini
src/: CMakeLists.txt  avl_tree.hpp  copyright.hpp  lattice.hpp  list_stack.hpp  model.hpp  worm.Element.hpp  worm.cpp  worm.hpp  worm.output.cpp  worm.run.cpp  worm.run_mpi.cpp  worm.update.cpp
test_mpi/BoseHubbard_Canonical/: CMakeLists.txt  compare.py  test.sh  test_serial.sh
test_mpi/BoseHubbard_Canonical/ED_canonical/: chain.json  cubic.json  honeycomb.json  ladder.json  square.json  triangular.json
test_mpi/BoseHubbard_Canonical/parameter_files/: chain.ini  cubic.ini  honeycomb.ini  ladder.ini  square.ini  triangular.ini
test_mpi/BoseHubbard_GrandCanonical/: CMakeLists.txt  compare.py
test_mpi/BoseHubbard_GrandCanonical/ED_GC/: chain.json  cubic.json  honeycomb.json  ladder.json  square.json  triangular.json
test_mpi/BoseHubbard_GrandCanonical/parameter_files/: chain.ini  cubic.ini  honeycomb.ini  ladder.ini  square.ini  triangular_new.ini  triangular_old.ini
test_mpi/XXZ_SpinOne/: clean.sh  compare.py
test_mpi/XXZ_SpinOne/ED_XXZ/: chain.json
test_mpi/XXZ_SpinOne/parameter_files/: chain.ini
test_mpi/XXZ_SpinOneHalf/: CMakeLists.txt  test.sh  test_serial.sh
test_mpi/XXZ_SpinOneHalf/ED_XXZ/: chain.json  cubic.json  honeycomb.json  ladder.json  square.json  square_XXZ.json  triangular.json
test_mpi/XXZ_SpinOneHalf/parameter_files/: chain.ini  cubic.ini  honeycomb.ini  ladder.ini  square.ini  square_XXZ.ini  triangular.ini
tools/: overwrite_param.py  print_corrfun.py  print_params.py  print_update_statistics.py
